# atlas

./: .gitignore  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: sample-aibom.json  sample-aibom.xml
src/atlas/: __init__.py  cli.py  models.py
src/atlas/generators/: __init__.py  cyclonedx.py
src/atlas/graph/: __init__.py  mapper.py
src/atlas/risk/: __init__.py  classifier.py
src/atlas/scanners/: __init__.py  autogen_scanner.py  base.py  crewai_scanner.py  generic_scanner.py  langchain_scanner.py
tests/: test_bom_generator.py  test_risk.py  test_scanners.py
