[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openguardrail-atlas"
version = "0.1.0"
description = "AI system discovery and risk mapping for agentic architectures. Generates CycloneDX AIBOMs with topology and risk classification."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "OpenGuardrail", email = "openguardrail@users.noreply.github.com" },
]
keywords = ["aibom", "cyclonedx", "ai-security", "sbom", "agentic-ai", "risk-mapping"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click==8.1.7",
    "cyclonedx-python-lib==7.6.1",
    "networkx==3.3",
    "rich==13.7.1",
    "pyyaml==6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-cov==5.0.0",
    "ruff==0.4.8",
    "mypy==1.10.0",
]

[project.scripts]
atlas = "atlas.cli:main"

[project.urls]
Homepage = "https://github.com/openguardrail/atlas"
Repository = "https://github.com/openguardrail/atlas"
Issues = "https://github.com/openguardrail/atlas/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/atlas"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
